# IOPmodelPython

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py
docs/source/: IOP_models_func.rst  WOPP.rst  conf.py  global_variables.rst  index.rst  modules.rst
iopmodel/: IOP_models_func.py  IOP_models_main.py  WOPP.py  global_variables.py  misc.py
iopmodel/data/: Phyto_lib_aphs.csv  Phyto_lib_bphs.csv  Phyto_lib_cphs.csv  Phyto_lib_info.csv  WOPP_computed_refri_T27_S0_180_4000nm.csv  WOPP_purewater_abs_coefficients.csv  ag_hat_lib.csv  coef_exp_ads.csv  frac_phyto_lib.csv
tests/: test_IOP_models_func.py  test_IOP_models_main.py  test_WOPP.py  test_misc.py
